Second design with more piraty inside.

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -26,3 +26,8 @@ body
   @include border-radius(13px, 13px)
   padding: 33px
   margin-bottom: 3em
+.image
+  text-align: center
+  & img
+    width: 55%
+    padding: 1em
