Cleaned and with social touch.

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -19,7 +19,7 @@ body
   font-size: 16px
 .container
   background: url('../images/logo.png') top center no-repeat
-  padding-top: 225px
+  padding-top: 210px
 #main
   background: rgba(255, 255, 255, 0.85)
   @include single-box-shadow(grey, 0px, 0px, 21px)
@@ -31,3 +31,9 @@ body
   & img
     width: 55%
     padding: 1em
+.wide
+  width: 63% !important
+#social
+  text-align: center
+.social-button
+  display: inline
