--- a/sass/app.sass
+++ b/sass/app.sass
@@ -33,7 +33,8 @@ body
     padding: 1em
 .wide
   width: 63% !important
-#social
+#social, #stock
   text-align: center
+  padding-bottom: 0.5em
 .social-button
   display: inline
