Barra de idiomas.

--- a/sass/app.sass
+++ b/sass/app.sass
@@ -38,3 +38,10 @@ body
   padding-bottom: 0.5em
 .social-button
   display: inline
+#lang
+  text-align: center
+  & li
+    display: inline
+    padding-right: 1em
+  & li:last
+    padding-right: 0
