--- a/sass/app.sass
+++ b/sass/app.sass
@@ -20,7 +20,7 @@ body
 .container
   background: url('../images/logo.png') top center no-repeat
   padding: 0
-  padding-top: 210px
+  padding-top: 105px
 #main
   background: rgba(255, 255, 255, 0.85)
   @include single-box-shadow(grey, 0px, 0px, 21px)
@@ -49,3 +49,7 @@ body
     padding-right: 1em
   & li:last
     padding-right: 0
+#text
+  & p
+    text-align: justify
+    line-height: 1.25em
