--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -2577,7 +2577,7 @@ body {
 .container {
   background: url("../images/logo.png") top center no-repeat;
   padding: 0;
-  padding-top: 210px;
+  padding-top: 105px;
 }
 
 /* line 24, ../sass/app.sass */
@@ -2638,4 +2638,10 @@ body {
 /* line 50, ../sass/app.sass */
 #lang li:last {
   padding-right: 0;
+}
+
+/* line 53, ../sass/app.sass */
+#text p {
+  text-align: justify;
+  line-height: 1.25em;
 }
